<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_display"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/title_display" />

    <item
        android:id="@+id/navigation_tutorien"
        android:icon="@drawable/ic_school_black_24dp"
        android:title="@string/title_tutorien" />

    <item
        android:id="@+id/navigation_create"
        android:icon="@drawable/ic_add_circle_black_24dp"
        android:title="@string/title_create" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_mail_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/title_profile" />

</menu>
